# riscv-sodor

./: .gitignore  .gitmodules  Jenkinsfile  LICENSE  Makefile  Makefile.in  README.md  README2  build.sbt  configure  configure.ac  prefix.mk.in
doc/: 1stage.xml  2stage.xml  3stage.xml  5stage.xml  fpga.xml  overview.xml  ucode.xml
emulator/common/: Makefile.include  SimDTM.cc  bp.cpp  bp.h  common.h  decode.h  disasm-modelsim.cc  disasm-modelsim.h  disasm-vcs.cc  disasm.cc  disasm.h  dtmxsdb.cc  dtmxsdb.h  emulator.cpp  htif_emulator.cc  htif_emulator.h  htif_main.cc  mm_param.h  tests.mk  tracer.cpp  tracer.h  tracer.py  verilator.h
emulator/fpgazynq/: Makefile  README.md
emulator/rv32_1stage/: Makefile  Makefile.in  emulator.cpp
emulator/rv32_2stage/: Makefile  Makefile.in  emulator.cpp
emulator/rv32_3stage/: Makefile  Makefile.in  emulator.cpp
emulator/rv32_5stage/: Makefile  Makefile.in  emulator.cpp
emulator/rv32_bp/: Makefile  emulator.cpp
emulator/rv32_cpp_bp/: Makefile  emulator.cpp
emulator/rv32_ucode/: Makefile  Makefile.in  emulator.cpp
emulator/zynqsimtop/: Makefile
fpga/: Makefile  README.md  bitstream.tcl  package.tcl  ps7_init.tcl  readme  sample.tcl
fpga/hdl/: sodor_temp_v1_0.v
install/: Makefile
install/riscv-bmarks/: dhrystone.riscv  dhrystone.riscv.dump  dhrystone.riscv.hex  median.riscv  median.riscv.dump  median.riscv.hex  median.rv32s  median.rv32u  median.rv32u.hex  mix_manufacturing.rv32s  mix_manufacturing.rv32u  mix_manufacturing.rv32u.hex  multiply.riscv  multiply.riscv.dump  multiply.riscv.hex  multiply.rv32s  multiply.rv32u  multiply.rv32u.hex  qsort.riscv  qsort.riscv.dump  qsort.riscv.hex  qsort.rv32s  qsort.rv32u  qsort.rv32u.hex  rsort.riscv  rsort.riscv.dump  towers.riscv  towers.riscv.dump  towers.riscv.hex  towers.rv32s  towers.rv32u  towers.rv32u.hex  vvadd.riscv  vvadd.riscv.dump  vvadd.riscv.hex  vvadd.rv32s  vvadd.rv32u  vvadd.rv32u.hex
install/riscv-isa/: add  add.dump  add.hex  addi  addi.dump  addi.hex  and  and.dump  and.hex  andi  andi.dump  andi.hex  auipc  auipc.dump  auipc.hex  beq  beq.dump  beq.hex  bge  bge.dump  bge.hex  bgeu  bgeu.dump  bgeu.hex  blt  blt.dump  blt.hex  bltu  bltu.dump  bltu.hex  bne  bne.dump  bne.hex  fence_i  fence_i.dump  fence_i.hex  j  j.dump  j.hex  jal  (+74 more)
install/riscv-tests/: riscv-v1_addi  (+269 more)
project/: build.scala  build.scala.in  check  plugins.sbt
riscv-bmarks/: dhrystone.riscv  dhrystone.riscv.dump  multiply.riscv  multiply.riscv.dump  qsort.riscv  rsort.riscv.dump  vvadd.riscv
scripts/: instructions.py  tracer.py
test/: .gitignore  Makefile
vsrc/: AsyncReadMem.sv  SimDTMonAXI4.v  SyncMem.sv
(+409 files in other folders)
